# PathTracing

./: .gitignore  BuildKDTree.cs  Cargo.toml  CompileShaders.cs  LoadObj.cs  PathTracing.csproj  PathTracing.sln  Path_Tracing.csproj  Path_Tracing.sln  Program.cs  comp_shader.glsl  frag_shader.glsl  packages.config  startup.txt
OpenTK/: BuildKDTree.cs  CompileShaders.cs  PathTracing.csproj  Program.cs  comp_shader.glsl  vert_shader.glsl
OpenTK/Load/: BuildKDTree.cs  CommonParse.cs  KDTree.cs  LoadMaterials.cs  LoadModel.cs  LoadObj.cs  LoadPlanes.cs  LoadSpheres.cs
OpenTK/Properties/: AssemblyInfo.cs
__legacy/: Cargo.toml
__legacy/src/: lib.rs
__legacy/src/material/: mod.rs
__legacy/src/material/material_input/: mod.rs  texture.rs
__legacy/src/raytraceable/: sphere.rs
__legacy/src/renderer/: mod.rs  shader_program.rs  window.rs
__legacy/src/scene/: mod.rs
__legacy/src/scene/kd_tree/: mod.rs  tree_node.rs
build_kd_tree/: Cargo.toml
build_kd_tree/src/: aabb.rs  main.rs  obj_loader.rs  tree.rs  triangle.rs  triangle_vs_aabb.rs  vec3.rs
client/: Cargo.toml
client/scene_data/: render_task.json  scene0.json  simple_scene.json
client/scene_data/materials/: mat0.json  mat3.json
client/src/: frame.rs  main.rs  scene.rs  window.rs  worker_connection.rs  worker_pool.rs
control_panel/: Cargo.toml
control_panel/scene_data/: old_scene.json  render_task.json  simple_scene.json
control_panel/scene_data/materials/: mat2.json  mat3.json  mat5.json
control_panel/src/: lib.rs  main.rs  scene.rs  server_state.rs
control_panel/src/rest_api/: mod.rs
kd_tree/: Cargo.toml
kd_tree/src/: aabb.rs  lib.rs  obj_loader.rs  tree.rs  triangle.rs
kd_tree_lib/: Cargo.toml
kd_tree_lib/src/: aabb.rs  lib.rs  obj_loader.rs  tree.rs  triangle.rs
math/: Cargo.toml
math/src/: lib.rs
math_lib/: Cargo.toml
math_lib/src/: lib.rs
rust_path_tracing/: Cargo.toml  sample_scene.json  tree.txt
rust_path_tracing/src/: camera.rs  main.rs  material.rs  math.rs  obj_loader.rs  ray.rs  scene.rs
rust_path_tracing/src/material/: base.rs  mod.rs  pbr.rs
rust_path_tracing/src/material/material_input/: mod.rs  texture.rs
rust_path_tracing/src/primitives/: mod.rs  plane.rs  sphere.rs
rust_path_tracing/src/raytraceable/: kd_tree.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
rust_path_tracing/src/raytraceable/kd_tree/: mod.rs  obj_loader.rs
rust_path_tracing/src/raytraceable/mesh/: mod.rs  obj_loader.rs
rust_path_tracing/src/raytraceable/triangle/: mod.rs
rust_path_tracing/src/renderer/: mod.rs  shader_program.rs  window.rs
rust_path_tracing/src/scene/: camera.rs  image_buffer.rs  mod.rs  work_group.rs
rust_path_tracing/src/scene/kd_tree/: mod.rs
scene_data/: scene.json
scene_data/materials/: mat1.json  mat2.json  mat4.json
worker/: Cargo.toml
worker/src/: camera.rs  file_store.rs  lib.rs  main.rs  ray.rs  render_store.rs
worker/src/api/: mod.rs  render_task.rs
worker/src/material/: base.rs  mod.rs
worker/src/material/material_input/: mod.rs  texture.rs
worker/src/renderer/: mod.rs
worker/src/renderer/cpu_renderer/: image_buffer.rs  mod.rs  work_group.rs
worker/src/scene/: mod.rs
worker/src/scene/hierarchy/: kd_tree.rs  mesh.rs  mod.rs  node_collection.rs  plane.rs  sphere.rs  transform.rs
worker/src/scene/material/: base.rs  mod.rs  pbr.rs
worker/src/scene/material/material_input/: mod.rs  texture.rs
worker/src/scene/mesh/: mod.rs  obj_loader.rs
worker/src/scene/mesh/triangle/: mod.rs
worker/src/scene/resource/: image.rs  mod.rs
worker/src/scene/resource/material/: base.rs  mod.rs  pbr.rs
worker/src/scene/resource/material/material_input/: mod.rs  texture.rs
worker/src/scene/resource/mesh/: mod.rs  obj_loader.rs
worker/src/scene/resource/mesh/triangle/: mod.rs  vertex.rs
worker/src/scene/scene_node/: kd_tree.rs  mesh.rs  mod.rs  node_collection.rs  plane.rs  sphere.rs  transform.rs
