[workspace]
resolver = "2"
members = ["./client", "./math", "./worker"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["mertwole"]

[workspace.dependencies]
math = { path = "./math" }
worker = { path = "./worker" }

futures-util = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
