[workspace]
resolver = "2"
members = ["./client", "./math", "./worker"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["mertwole"]

[workspace.dependencies]
math = { path = "./math" }
worker = { path = "./worker" }

anyhow = { version = "1.0.102", default-features = false }
futures-util = { version = "0.3", default-features = false }
iced = "0.14.0"
iced_aw = { version = "0.14.0", default-features = false }
postcard = { version = "1.1.3", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = "0.29"
