[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
worker.workspace = true

futures-util = { workspace = true, features = ["sink", "std"] }
iced = { workspace = true, features = ["canvas", "debug", "image", "advanced"] }
postcard.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-tungstenite.workspace = true

mongodb = "2.4.0"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.91"
futures = "0.3.28"
clap = {version = "4.1.11", features = ["derive", "env"] }
image = "0.24.5"
md5 = "0.7.0"
