[package]
name = "control_panel"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.91"
md5 = "0.7.0"
mongodb = "2.4.0"
clap = {version = "4.1.11", features = ["derive", "env"] }
tokio = "1.26.0"
futures-util = "0.3.27"
amqprs = { version = "1.2.0", features = ["urispec"] }
async-trait = "0.1.67"

worker = { path = "../worker" }
math = { path = "../math" }
