[package]
name = "control_panel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"

serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.91"

clap = {version = "4.1.11", features = ["derive", "env"] }

mongodb = "2.4.0"
amqprs = { version = "1.2.0", features = ["urispec"] }

futures-util = "0.3.27"
async-trait = "0.1.67"

image = "0.24.5"

md5 = "0.7.0"

worker = { path = "../worker" }
math = { path = "../math" }
