[package]
name = "rust_path_tracing"
version = "0.1.0"
authors = ["mertwole <mertwole@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "*"
gl = "*"
include_dir = "*"

image = "*"
rand = "*"
num_cpus = "*"
threadpool = "*"
kd_tree = { path = "../kd_tree" }
math = { path = "../math" }