[package]
name = "rust_path_tracing"
version = "0.1.0"
authors = ["mertwole <mertwole@gmail.com>"]
edition = "2018"

[dependencies]
glfw = "0.49.1"
gl = "0.14.0"
include_dir = "0.7.3"

image = "0.24.5"
rand = "0.8.5"
num_cpus = "1.15.0"
threadpool = "1.8.1"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.91"
typetag = "0.2.4"
kd_tree = { path = "../kd_tree" }
math = { path = "../math" }