[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = { version = "1.2.0", features = ["urispec"] }
clap = {version = "4.1.11", features = ["derive", "env"] }
tokio = "1.26.0"
mongodb = "2.4.0"
md5 = "0.7.0"
futures = "0.3.27"
futures-util = "0.3.27"

serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.91"
typetag = "0.2.4"

rand = "0.8.5"

math = { path = "../math" }