[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.1.11", features = ["derive", "env"] }

amqprs = { version = "1.2.0", features = ["urispec"] }
mongodb = "2.4.0"

tokio = "1.26.0"
futures = "0.3.27"
futures-util = "0.3.27"
async-trait = "0.1.68"
threadpool = "1.8.1"

num_cpus = "1.15.0"

serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.91"
typetag = "0.2.4"

rand = "0.8.5"
md5 = "0.7.0"

image = "0.24.5"
tobj = "3.2.3"

itertools = "0.10.5"

math = { path = "../math" }