[package]
name = "worker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
math.workspace = true 

futures-util = { workspace = true, features = ["sink", "std"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true

clap = {version = "4.1.11", features = ["derive", "env"] }
mongodb = "2.4.0"
futures = "0.3.27"
async-trait = "0.1.68"
threadpool = "1.8.1"
num_cpus = "1.15.0"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.91"
typetag = "0.2.4"
rand = "0.8.5"
md5 = "0.7.0"
image = "0.24.5"
tobj = "3.2.3"
itertools = "0.10.5"
